#1387: Use List.of(...)